crates/fixtures/tests/snapshots/hostile__rtl_mixed.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      119
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "page": {
    "width": 430080,
    "height": 307200,
    "margin_top": 36864,
    "margin_left": 36864,
    "column_width": 225280,
    "gutter": 18432,
    "margin_column_width": 112640,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "pages": [
    {
      "width": 430080,
      "height": 307200
    }
  ],
  "frames": [
    {
      "name": "main",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 36864,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 225280,
        "height": 233472
      }
    },
    {
      "name": "margin",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 280576,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 233472
      }
    }
  ],
  "blocks": [
    {
      "node": "6@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 47
          },
          "preview": "English, then עברית עם 123 ו-456, then",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 10707,
          "width": 201090,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 47
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 203715
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 47,
            "end": 96
          },
          "preview": "العربية with English inside it, then back",
          "rect": {
            "origin": {
              "x": 0,
              "y": 13517
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 24224,
          "width": 213933,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 47,
                "end": 96
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 216558
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 96,
            "end": 107
          },
          "preview": "to English.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 27034
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 37741,
          "width": 53449,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 96,
                "end": 107
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 53449
            }
          ]
        }
      ]
    },
    {
      "node": "102@1",
      "kind": "annotation",
      "style": {
        "family": "Source Serif Pro",
        "size": 8448,
        "line_height": 10560,
        "explain": {
          "family": "default",
          "line-height": "style note",
          "size": "style note"
        }
      },
      "lines": [
        {
          "frame": 1,
          "text": {
            "start": 0,
            "end": 7
          },
          "preview": "A note.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 112640,
            "height": 10560
          },
          "baseline": 8241,
          "width": 26592,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 7
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 8448,
              "level": 0,
              "x": 0,
              "width": 26592
            }
          ]
        }
      ]
    }
  ],
  "relations": [
    {
      "id": "118@1",
      "schema": "reprise.follow",
      "owner": "102@1",
      "status": "valid",
      "applied": true,
      "targets": [
        {
          "role": "line",
          "status": "valid",
          "resolved": {
            "line": {
              "node": "6@1",
              "line": 0
            }
          }
        }
      ]
    }
  ],
  "diagnostics": []
}
