crates/fixtures/tests/snapshots/hostile__scripts_common_inherited.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      68
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "page": {
    "width": 430080,
    "height": 307200,
    "margin_top": 36864,
    "margin_left": 36864,
    "column_width": 225280,
    "gutter": 18432,
    "margin_column_width": 112640,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "pages": [
    {
      "width": 430080,
      "height": 307200
    }
  ],
  "frames": [
    {
      "name": "main",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 36864,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 225280,
        "height": 233472
      }
    },
    {
      "name": "margin",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 280576,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 233472
      }
    }
  ],
  "blocks": [
    {
      "node": "6@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 69
          },
          "preview": "(Latin é, [Ελληνικά ά] after), Кириллица и́;",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 10707,
          "width": 215840,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 13
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 47759
            },
            {
              "range": {
                "start": 13,
                "end": 34
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 47759,
              "width": 54755
            },
            {
              "range": {
                "start": 34,
                "end": 44
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 102514,
              "width": 38861
            },
            {
              "range": {
                "start": 44,
                "end": 69
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 141375,
              "width": 77090
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 69,
            "end": 81
          },
          "preview": "Latin again.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 13517
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 24224,
          "width": 59440,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 69,
                "end": 81
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 59440
            }
          ]
        }
      ]
    }
  ],
  "relations": [],
  "diagnostics": []
}
