crates/fixtures/tests/snapshots/hostile__snapshot_targets.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      103
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "page": {
    "width": 430080,
    "height": 307200,
    "margin_top": 36864,
    "margin_left": 36864,
    "column_width": 225280,
    "gutter": 18432,
    "margin_column_width": 112640,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "pages": [
    {
      "width": 430080,
      "height": 307200
    }
  ],
  "frames": [
    {
      "name": "main",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 36864,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 225280,
        "height": 233472
      }
    },
    {
      "name": "margin",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 280576,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 233472
      }
    }
  ],
  "blocks": [
    {
      "node": "6@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 10
          },
          "preview": "The owner.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 10707,
          "width": 56423,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 10
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 56423
            }
          ]
        }
      ]
    },
    {
      "node": "20@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 20
          },
          "preview": "The revised wording.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 21709
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 32416,
          "width": 105918,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 20
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 105918
            }
          ]
        }
      ]
    },
    {
      "node": "50@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 19
          },
          "preview": "Written afterwards.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 43418
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 54125,
          "width": 97806,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 19
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 97806
            }
          ]
        }
      ]
    }
  ],
  "relations": [
    {
      "id": "88@1",
      "schema": "reprise.reference",
      "owner": "6@1",
      "status": "valid",
      "applied": true,
      "targets": [
        {
          "role": "to",
          "status": "valid",
          "resolved": {
            "snapshot": {
              "version": [
                [
                  1,
                  49
                ]
              ],
              "node": "20@1",
              "bytes": {
                "start": 0,
                "end": 21
              },
              "text": "The original wording.",
              "truncated": false,
              "exists_now": true,
              "unchanged": false
            }
          }
        }
      ]
    },
    {
      "id": "90@1",
      "schema": "reprise.reference",
      "owner": "6@1",
      "status": "valid",
      "applied": true,
      "targets": [
        {
          "role": "to",
          "status": "valid",
          "resolved": {
            "snapshot": {
              "version": [
                [
                  1,
                  49
                ]
              ],
              "node": "20@1",
              "bytes": {
                "start": 4,
                "end": 12
              },
              "text": "original",
              "truncated": false,
              "exists_now": false,
              "unchanged": false
            }
          }
        }
      ]
    },
    {
      "id": "92@1",
      "schema": "reprise.reference",
      "owner": "6@1",
      "status": "missing",
      "applied": false,
      "targets": [
        {
          "role": "to",
          "status": "missing",
          "resolved": null
        }
      ]
    },
    {
      "id": "94@1",
      "schema": "reprise.reference",
      "owner": "6@1",
      "status": "missing",
      "applied": false,
      "targets": [
        {
          "role": "to",
          "status": "missing",
          "resolved": null
        }
      ]
    },
    {
      "id": "96@1",
      "schema": "reprise.reference",
      "owner": "6@1",
      "status": "missing",
      "applied": false,
      "targets": [
        {
          "role": "to",
          "status": "missing",
          "resolved": null
        }
      ]
    },
    {
      "id": "98@1",
      "schema": "reprise.reference",
      "owner": "6@1",
      "status": "missing",
      "applied": false,
      "targets": [
        {
          "role": "to",
          "status": "missing",
          "resolved": null
        }
      ]
    },
    {
      "id": "100@1",
      "schema": "reprise.reference",
      "owner": "6@1",
      "status": "missing",
      "applied": false,
      "targets": [
        {
          "role": "to",
          "status": "missing",
          "resolved": null
        }
      ]
    },
    {
      "id": "102@1",
      "schema": "reprise.reference",
      "owner": "6@1",
      "status": "missing",
      "applied": false,
      "targets": [
        {
          "role": "to",
          "status": "missing",
          "resolved": null
        }
      ]
    }
  ],
  "diagnostics": [
    {
      "severity": "error",
      "code": "relation.no-match",
      "subject": {
        "kind": "relation",
        "id": "92@1"
      },
      "message": "the snapshot's subject did not exist at that version",
      "bytes": null
    },
    {
      "severity": "error",
      "code": "relation.no-match",
      "subject": {
        "kind": "relation",
        "id": "94@1"
      },
      "message": "the snapshot's subject did not exist at that version",
      "bytes": null
    },
    {
      "severity": "error",
      "code": "relation.snapshot-unavailable",
      "subject": {
        "kind": "relation",
        "id": "96@1"
      },
      "message": "snapshot unavailable: the version is not in this document's history",
      "bytes": null
    },
    {
      "severity": "error",
      "code": "relation.snapshot-unavailable",
      "subject": {
        "kind": "relation",
        "id": "98@1"
      },
      "message": "snapshot unavailable: the version is not in this document's history",
      "bytes": null
    },
    {
      "severity": "error",
      "code": "relation.snapshot-unavailable",
      "subject": {
        "kind": "relation",
        "id": "100@1"
      },
      "message": "snapshot unavailable: the version is malformed",
      "bytes": null
    },
    {
      "severity": "error",
      "code": "relation.snapshot-unavailable",
      "subject": {
        "kind": "relation",
        "id": "102@1"
      },
      "message": "snapshot unavailable: the version is malformed",
      "bytes": null
    }
  ]
}
